fix refs.bib file paths by removing unnecessary PDF markers

--- a/papers/refs.bib
+++ b/papers/refs.bib
@@ -9,7 +9,7 @@
   pages     = {181--198},
   volume    = {54},
   doi       = {10.1017/jpr.2016.94},
-  file      = {:Haslegrave2017 - Reaching Consensus on a Connected Graph.pdf:PDF},
+  file      = {Haslegrave2017 - Reaching Consensus on a Connected Graph.pdf},
   fjournal  = {Journal of Applied Probability},
   mrclass   = {60G40 (60G50 60K35)},
   mrnumber  = {3632613},
@@ -27,7 +27,7 @@
   volume    = {9},
   abstract  = {Scientific Reports, doi:10.1038/s41598-019-40648-w},
   doi       = {10.1038/s41598-019-40648-w},
-  file      = {:Henze2019 - Multi Scale Stochastic Organization Oriented Coarse Graining Exemplified on the Human Mitotic Checkpoint.pdf:PDF},
+  file      = {Henze2019 - Multi Scale Stochastic Organization Oriented Coarse Graining Exemplified on the Human Mitotic Checkpoint.pdf},
   publisher = {Springer Science and Business Media LLC},
 }
 
@@ -42,7 +42,7 @@
   pages     = {6920},
   volume    = {15},
   doi       = {10.3390/en15196920},
-  file      = {:Damjanovic2022 - Deep Reinforcement Learning Based Approach for Autonomous Power Flow Control Using Only Topology Changes.pdf:PDF},
+  file      = {Damjanovic2022 - Deep Reinforcement Learning Based Approach for Autonomous Power Flow Control Using Only Topology Changes.pdf},
   publisher = {MDPI AG},
 }
 
@@ -55,7 +55,7 @@
   month     = dec,
   volume    = {410},
   doi       = {10.1016/j.amc.2021.126454},
-  file      = {:AglicAljinovic2021 - On Ostrowski Inequality for Quantum Calculus.pdf:PDF},
+  file      = {AglicAljinovic2021 - On Ostrowski Inequality for Quantum Calculus.pdf},
   fjournal  = {Applied Mathematics and Computation},
   keywords  = {Q-derivative, Q-integral, Midpoint inequality, Ostrowski inequality, Hahn difference operator},
   mrclass   = {26D10 (05A30 26D15 26E70)},
@@ -74,7 +74,7 @@
   pages      = {2158--2179},
   volume     = {38},
   doi        = {10.1017/etds.2016.123},
-  file       = {:Fernandez2018 - Almost Minimal Systems and Periodicity in Hyperspaces.pdf:PDF},
+  file       = {Fernandez2018 - Almost Minimal Systems and Periodicity in Hyperspaces.pdf},
   fjournal   = {Ergodic Theory and Dynamical Systems},
   mrclass    = {37B05},
   mrnumber   = {3833345},
@@ -92,7 +92,7 @@
   pages     = {83--90},
   volume    = {81},
   doi       = {10.1016/j.chaos.2015.08.026},
-  file      = {:Fernandez2015 - Chain Transitivity in Hyperspaces.pdf:PDF},
+  file      = {Fernandez2015 - Chain Transitivity in Hyperspaces.pdf},
   fjournal  = {Chaos, Solitons & Fractals},
   mrclass   = {37B20},
   mrnumber  = {3426021},
@@ -109,7 +109,7 @@
   number    = {49},
   volume    = {57},
   doi       = {10.1088/1751-8121/ad909c},
-  file      = {:Doslic2024b - A Model of Random Sequential Adsorption on a Ladder Graph.pdf:PDF},
+  file      = {Doslic2024b - A Model of Random Sequential Adsorption on a Ladder Graph.pdf},
   publisher = {IOP Publishing},
 }
 
@@ -124,7 +124,7 @@
   pages     = {915--928},
   volume    = {130},
   doi       = {10.1080/00029890.2023.2254181},
-  file      = {:Puljiz2023b - Packing Density of Combinatorial Settlement Planning Models.pdf:PDF},
+  file      = {Puljiz2023b - Packing Density of Combinatorial Settlement Planning Models.pdf},
   fjournal  = {American Mathematical Monthly},
   mrclass   = {60C05 (90C27)},
   mrnumber  = {4669233},
@@ -142,7 +142,7 @@
   pages     = {20--47},
   volume    = {18},
   doi       = {10.55016/ojs/cdm.v18i2.73491},
-  file      = {:Puljiz2023 - Combinatorial Settlement Planning.pdf:PDF},
+  file      = {Puljiz2023 - Combinatorial Settlement Planning.pdf},
   fjournal  = {Contributions to Discrete Mathematics},
   mrclass   = {05B40 (00A67 52C15 60C05 90C27)},
   mrnumber  = {4696412},
@@ -159,7 +159,7 @@
   pages     = {269--292},
   volume    = {356},
   doi       = {10.1016/j.dam.2024.06.011},
-  file      = {:Doslic2024 - On a Variant of Flory Model.pdf:PDF},
+  file      = {Doslic2024 - On a Variant of Flory Model.pdf},
   publisher = {Elsevier BV},
 }
 
@@ -173,7 +173,7 @@
   pages     = {5653--5664},
   volume    = {36},
   doi       = {10.2298/fil2216653a},
-  file      = {:AglicAljinovic2022 - Sharp Trapezoid Inequality for Quantum Integral Operator.pdf:PDF},
+  file      = {AglicAljinovic2022 - Sharp Trapezoid Inequality for Quantum Integral Operator.pdf},
   fjournal  = {Univerzitet u Nišu. Prirodno-Matematički Fakultet. Filomat},
   mrclass   = {26D15 (26E70)},
   mrnumber  = {4556566},
@@ -191,7 +191,7 @@
   series     = {CroCoDays},
   collection = {CroCoDays},
   doi        = {10.5592/co/ccd.2022.07},
-  file       = {:Puljiz2023a - Complexity Function for a Variant of Flory Model on a Ladder.pdf:PDF},
+  file       = {Puljiz2023a - Complexity Function for a Variant of Flory Model on a Ladder.pdf},
   isbn       = {978-953-8168-63-5},
   url        = {https://www.grad.hr/crocodays/proc_ccd4/Puljiz.pdf},
 }
@@ -206,7 +206,7 @@
   pages     = {1880--1888},
   volume    = {6},
   doi       = {10.3934/math.2021114},
-  file      = {:AglicAljinovic2021a - Correction_ Quantum Montgomery Identity and Quantum Estimates of Ostrowski Type Inequalities.pdf:PDF},
+  file      = {AglicAljinovic2021a - Correction_ Quantum Montgomery Identity and Quantum Estimates of Ostrowski Type Inequalities.pdf},
   fjournal  = {AIMS Mathematics},
   mrclass   = {26D10 (05A30 26D15)},
   mrnumber  = {4181218},
@@ -224,7 +224,7 @@
   pages     = {#P4.05},
   volume    = {24},
   doi       = {10.26493/1855-3974.3114.d47},
-  file      = {:Doslic2024a - Complexity Function of Jammed Configurations of Rydberg Atoms.pdf:PDF},
+  file      = {Doslic2024a - Complexity Function of Jammed Configurations of Rydberg Atoms.pdf},
   publisher = {University of Primorska Press},
 }
 
@@ -238,12 +238,10 @@
   pages      = {287--312},
   volume     = {244},
   doi        = {10.4064/fm492-5-2018},
-  file       = {:Good2019 - Shadowing, Asymptotic Shadowing and S Limit Shadowing.pdf:PDF},
+  file       = {Good2019 - Shadowing, Asymptotic Shadowing and S Limit Shadowing.pdf},
   fjournal   = {Fundamenta Mathematicae},
   mrclass    = {37E05 (37B10 37C50 54H20)},
   mrnumber   = {3893427},
   mrreviewer = {Peng\ {Sun}},
   publisher  = {Institute of Mathematics, Polish Academy of Sciences},
 }
-
-@Comment{jabref-meta: databaseType:bibtex;}
