--- a/papers/refs.bib
+++ b/papers/refs.bib
@@ -1,104 +1,3 @@
-@Article{Haslegrave2017,
-  author    = {Haslegrave, John and Puljiz, Mate},
-  journal   = {Journal of Applied Probability},
-  title     = {Reaching consensus on a connected graph},
-  year      = {2017},
-  issn      = {0021-9002,1475-6072},
-  month     = mar,
-  number    = {1},
-  pages     = {181--198},
-  volume    = {54},
-  doi       = {10.1017/jpr.2016.94},
-  file      = {Haslegrave2017 - Reaching Consensus on a Connected Graph.pdf},
-  fjournal  = {Journal of Applied Probability},
-  mrclass   = {60G40 (60G50 60K35)},
-  mrnumber  = {3632613},
-  publisher = {Cambridge University Press (CUP)},
-}
-
-@Article{Henze2019,
-  author    = {Henze, Richard and Mu, Chunyan and Puljiz, Mate and Kamaleson, Nishanthan and Huwald, Jan and Haslegrave, John and di Fenizio, Pietro Speroni and Parker, David and Good, Christopher and Rowe, Jonathan E. and Ibrahim, Bashar and Dittrich, Peter},
-  journal   = {Scientific Reports},
-  title     = {Multi-scale stochastic organization-oriented coarse-graining exemplified on the human mitotic checkpoint},
-  year      = {2019},
-  issn      = {2045-2322},
-  month     = mar,
-  number    = {1},
-  volume    = {9},
-  abstract  = {Scientific Reports, doi:10.1038/s41598-019-40648-w},
-  doi       = {10.1038/s41598-019-40648-w},
-  file      = {Henze2019 - Multi Scale Stochastic Organization Oriented Coarse Graining Exemplified on the Human Mitotic Checkpoint.pdf},
-  publisher = {Springer Science and Business Media LLC},
-}
-
-@Article{Damjanovic2022,
-  author    = {Damjanović, Ivana and Pavić, Ivica and Puljiz, Mate and Brcic, Mario},
-  journal   = {Energies},
-  title     = {Deep Reinforcement Learning-Based Approach for Autonomous Power Flow Control Using Only Topology Changes},
-  year      = {2022},
-  issn      = {1996-1073},
-  month     = sep,
-  number    = {19},
-  pages     = {6920},
-  volume    = {15},
-  doi       = {10.3390/en15196920},
-  file      = {Damjanovic2022 - Deep Reinforcement Learning Based Approach for Autonomous Power Flow Control Using Only Topology Changes.pdf},
-  publisher = {MDPI AG},
-}
-
-@Article{AglicAljinovic2021,
-  author    = {Aglić Aljinović, Andrea and Kovačević, Domagoj and Puljiz, Mate and Žgaljić Keko, Ana},
-  journal   = {Applied Mathematics and Computation},
-  title     = {On Ostrowski inequality for quantum calculus},
-  year      = {2021},
-  issn      = {0096-3003,1873-5649},
-  month     = dec,
-  volume    = {410},
-  doi       = {10.1016/j.amc.2021.126454},
-  file      = {AglicAljinovic2021 - On Ostrowski Inequality for Quantum Calculus.pdf},
-  fjournal  = {Applied Mathematics and Computation},
-  keywords  = {Q-derivative, Q-integral, Midpoint inequality, Ostrowski inequality, Hahn difference operator},
-  mrclass   = {26D10 (05A30 26D15 26E70)},
-  mrnumber  = {4278030},
-  publisher = {Elsevier BV},
-}
-
-@Article{Fernandez2018,
-  author     = {Fernández, Leobardo and Good, Chris and Puljiz, Mate},
-  journal    = {Ergodic Theory and Dynamical Systems},
-  title      = {Almost minimal systems and periodicity in hyperspaces},
-  year       = {2018},
-  issn       = {0143-3857,1469-4417},
-  month      = mar,
-  number     = {6},
-  pages      = {2158--2179},
-  volume     = {38},
-  doi        = {10.1017/etds.2016.123},
-  file       = {Fernandez2018 - Almost Minimal Systems and Periodicity in Hyperspaces.pdf},
-  fjournal   = {Ergodic Theory and Dynamical Systems},
-  mrclass    = {37B05},
-  mrnumber   = {3833345},
-  mrreviewer = {Piotr\ {Oprocha}},
-  publisher  = {Cambridge University Press (CUP)},
-}
-
-@Article{Fernandez2015,
-  author    = {Fernández, Leobardo and Good, Chris and Puljiz, Mate and Ramírez, Ártico},
-  journal   = {Chaos, Solitons & Fractals},
-  title     = {Chain transitivity in hyperspaces},
-  year      = {2015},
-  issn      = {0960-0779,1873-2887},
-  month     = dec,
-  pages     = {83--90},
-  volume    = {81},
-  doi       = {10.1016/j.chaos.2015.08.026},
-  file      = {Fernandez2015 - Chain Transitivity in Hyperspaces.pdf},
-  fjournal  = {Chaos, Solitons & Fractals},
-  mrclass   = {37B20},
-  mrnumber  = {3426021},
-  publisher = {Elsevier BV},
-}
-
 @Article{Doslic2024b,
   author    = {Došlić, Tomislav and Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
   journal   = {Journal of Physics A: Mathematical and Theoretical},
@@ -111,6 +10,35 @@
   doi       = {10.1088/1751-8121/ad909c},
   file      = {Doslic2024b - A Model of Random Sequential Adsorption on a Ladder Graph.pdf},
   publisher = {IOP Publishing},
+}
+
+@Article{Doslic2024,
+  author    = {Došlić, Tomislav and Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
+  journal   = {Discrete Applied Mathematics},
+  title     = {On a variant of Flory model},
+  year      = {2024},
+  issn      = {0166-218X},
+  month     = oct,
+  pages     = {269--292},
+  volume    = {356},
+  doi       = {10.1016/j.dam.2024.06.011},
+  file      = {Doslic2024 - On a Variant of Flory Model.pdf},
+  publisher = {Elsevier BV},
+}
+
+@Article{Doslic2024a,
+  author    = {Došlić, Tomislav and Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
+  journal   = {Ars Mathematica Contemporanea},
+  title     = {Complexity function of jammed configurations of Rydberg atoms},
+  year      = {2024},
+  issn      = {1855-3966},
+  month     = sep,
+  number    = {4},
+  pages     = {1--28},
+  volume    = {24},
+  doi       = {10.26493/1855-3974.3114.d47},
+  file      = {Doslic2024a - Complexity Function of Jammed Configurations of Rydberg Atoms.pdf},
+  publisher = {University of Primorska Press},
 }
 
 @Article{Puljiz2023b,
@@ -149,18 +77,35 @@
   publisher = {University of Calgary},
 }
 
-@Article{Doslic2024,
-  author    = {Došlić, Tomislav and Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
-  journal   = {Discrete Applied Mathematics},
-  title     = {On a variant of Flory model},
-  year      = {2024},
-  issn      = {0166-218X},
-  month     = oct,
-  pages     = {269--292},
-  volume    = {356},
-  doi       = {10.1016/j.dam.2024.06.011},
-  file      = {Doslic2024 - On a Variant of Flory Model.pdf},
-  publisher = {Elsevier BV},
+@InProceedings{Puljiz2023a,
+  author     = {Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
+  booktitle  = {Proceedings of the 4th Croatian Combinatorial Days},
+  title      = {Complexity function for a variant of Flory model on a ladder},
+  year       = {2023},
+  month      = jun,
+  pages      = {93--109},
+  publisher  = {University of Zagreb Faculty of Civil Engineering},
+  series     = {CroCoDays},
+  collection = {CroCoDays},
+  doi        = {10.5592/co/ccd.2022.07},
+  file       = {Puljiz2023a - Complexity Function for a Variant of Flory Model on a Ladder.pdf},
+  isbn       = {978-953-8168-63-5},
+  url        = {https://www.grad.hr/crocodays/proc_ccd4/Puljiz.pdf},
+}
+
+@Article{Damjanovic2022,
+  author    = {Damjanović, Ivana and Pavić, Ivica and Puljiz, Mate and Brčić, Mario},
+  journal   = {Energies},
+  title     = {Deep Reinforcement Learning-Based Approach for Autonomous Power Flow Control Using Only Topology Changes},
+  year      = {2022},
+  issn      = {1996-1073},
+  month     = sep,
+  number    = {19},
+  pages     = {6920},
+  volume    = {15},
+  doi       = {10.3390/en15196920},
+  file      = {Damjanovic2022 - Deep Reinforcement Learning Based Approach for Autonomous Power Flow Control Using Only Topology Changes.pdf},
+  publisher = {MDPI AG},
 }
 
 @Article{AglicAljinovic2022,
@@ -180,20 +125,21 @@
   publisher = {National Library of Serbia},
 }
 
-@InProceedings{Puljiz2023a,
-  author     = {Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
-  booktitle  = {Proceedings of the 4th Croatian Combinatorial Days},
-  title      = {Complexity function for a variant of Flory model on a ladder},
-  year       = {2023},
-  month      = jun,
-  pages      = {93--109},
-  publisher  = {University of Zagreb Faculty of Civil Engineering},
-  series     = {CroCoDays},
-  collection = {CroCoDays},
-  doi        = {10.5592/co/ccd.2022.07},
-  file       = {Puljiz2023a - Complexity Function for a Variant of Flory Model on a Ladder.pdf},
-  isbn       = {978-953-8168-63-5},
-  url        = {https://www.grad.hr/crocodays/proc_ccd4/Puljiz.pdf},
+@Article{AglicAljinovic2021,
+  author    = {Aglić Aljinović, Andrea and Kovačević, Domagoj and Puljiz, Mate and Žgaljić Keko, Ana},
+  journal   = {Applied Mathematics and Computation},
+  title     = {On Ostrowski inequality for quantum calculus},
+  year      = {2021},
+  issn      = {0096-3003,1873-5649},
+  month     = dec,
+  volume    = {410},
+  doi       = {10.1016/j.amc.2021.126454},
+  file      = {AglicAljinovic2021 - On Ostrowski Inequality for Quantum Calculus.pdf},
+  fjournal  = {Applied Mathematics and Computation},
+  keywords  = {Q-derivative, Q-integral, Midpoint inequality, Ostrowski inequality, Hahn difference operator},
+  mrclass   = {26D10 (05A30 26D15 26E70)},
+  mrnumber  = {4278030},
+  publisher = {Elsevier BV},
 }
 
 @Article{AglicAljinovic2021a,
@@ -213,19 +159,19 @@
   publisher = {American Institute of Mathematical Sciences (AIMS)},
 }
 
-@Article{Doslic2024a,
-  author    = {Došlić, Tomislav and Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
-  journal   = {Ars Mathematica Contemporanea},
-  title     = {Complexity function of jammed configurations of Rydberg atoms},
-  year      = {2024},
-  issn      = {1855-3966},
-  month     = sep,
-  number    = {4},
-  pages     = {#P4.05},
-  volume    = {24},
-  doi       = {10.26493/1855-3974.3114.d47},
-  file      = {Doslic2024a - Complexity Function of Jammed Configurations of Rydberg Atoms.pdf},
-  publisher = {University of Primorska Press},
+@Article{Henze2019,
+  author    = {Henze, Richard and Mu, Chunyan and Puljiz, Mate and Kamaleson, Nishanthan and Huwald, Jan and Haslegrave, John and di Fenizio, Pietro Speroni and Parker, David and Good, Christopher and Rowe, Jonathan E. and Ibrahim, Bashar and Dittrich, Peter},
+  journal   = {Scientific Reports},
+  title     = {Multi-scale stochastic organization-oriented coarse-graining exemplified on the human mitotic checkpoint},
+  year      = {2019},
+  issn      = {2045-2322},
+  month     = mar,
+  number    = {1},
+  volume    = {9},
+  abstract  = {Scientific Reports, doi:10.1038/s41598-019-40648-w},
+  doi       = {10.1038/s41598-019-40648-w},
+  file      = {Henze2019 - Multi Scale Stochastic Organization Oriented Coarse Graining Exemplified on the Human Mitotic Checkpoint.pdf},
+  publisher = {Springer Science and Business Media LLC},
 }
 
 @Article{Good2019,
@@ -244,4 +190,58 @@
   mrnumber   = {3893427},
   mrreviewer = {Peng\ {Sun}},
   publisher  = {Institute of Mathematics, Polish Academy of Sciences},
+}
+
+@Article{Fernandez2018,
+  author     = {Fernández, Leobardo and Good, Chris and Puljiz, Mate},
+  journal    = {Ergodic Theory and Dynamical Systems},
+  title      = {Almost minimal systems and periodicity in hyperspaces},
+  year       = {2018},
+  issn       = {0143-3857,1469-4417},
+  month      = mar,
+  number     = {6},
+  pages      = {2158--2179},
+  volume     = {38},
+  doi        = {10.1017/etds.2016.123},
+  file       = {Fernandez2018 - Almost Minimal Systems and Periodicity in Hyperspaces.pdf},
+  fjournal   = {Ergodic Theory and Dynamical Systems},
+  mrclass    = {37B05},
+  mrnumber   = {3833345},
+  mrreviewer = {Piotr\ {Oprocha}},
+  publisher  = {Cambridge University Press (CUP)},
+}
+
+@Article{Haslegrave2017,
+  author    = {Haslegrave, John and Puljiz, Mate},
+  journal   = {Journal of Applied Probability},
+  title     = {Reaching consensus on a connected graph},
+  year      = {2017},
+  issn      = {0021-9002,1475-6072},
+  month     = mar,
+  number    = {1},
+  pages     = {181--198},
+  volume    = {54},
+  doi       = {10.1017/jpr.2016.94},
+  file      = {Haslegrave2017 - Reaching Consensus on a Connected Graph.pdf},
+  fjournal  = {Journal of Applied Probability},
+  mrclass   = {60G40 (60G50 60K35)},
+  mrnumber  = {3632613},
+  publisher = {Cambridge University Press (CUP)},
+}
+
+@Article{Fernandez2015,
+  author    = {Fernández, Leobardo and Good, Chris and Puljiz, Mate and Ramírez, Ártico},
+  journal   = {Chaos, Solitons & Fractals},
+  title     = {Chain transitivity in hyperspaces},
+  year      = {2015},
+  issn      = {0960-0779,1873-2887},
+  month     = dec,
+  pages     = {83--90},
+  volume    = {81},
+  doi       = {10.1016/j.chaos.2015.08.026},
+  file      = {Fernandez2015 - Chain Transitivity in Hyperspaces.pdf},
+  fjournal  = {Chaos, Solitons & Fractals},
+  mrclass   = {37B20},
+  mrnumber  = {3426021},
+  publisher = {Elsevier BV},
 }
