fix: escape ampersands in publisher and journal fields in refs.bib

--- a/papers/refs.bib
+++ b/papers/refs.bib
@@ -56,7 +56,7 @@
   fjournal  = {American Mathematical Monthly},
   mrclass   = {60C05 (90C27)},
   mrnumber  = {4669233},
-  publisher = {Taylor & Francis},
+  publisher = {Taylor \& Francis},
 }
 
 @Article{Puljiz2023,
@@ -231,7 +231,7 @@
 
 @Article{Fernandez2015,
   author    = {Fernández, Leobardo and Good, Chris and Puljiz, Mate and Ramírez, Ártico},
-  journal   = {Chaos, Solitons & Fractals},
+  journal   = {Chaos, Solitons \& Fractals},
   title     = {Chain transitivity in hyperspaces},
   year      = {2015},
   issn      = {0960-0779,1873-2887},
@@ -240,7 +240,7 @@
   volume    = {81},
   doi       = {10.1016/j.chaos.2015.08.026},
   file      = {Fernandez2015 - Chain Transitivity in Hyperspaces.pdf},
-  fjournal  = {Chaos, Solitons & Fractals},
+  fjournal  = {Chaos, Solitons \& Fractals},
   mrclass   = {37B20},
   mrnumber  = {3426021},
   publisher = {Elsevier BV},
