feat: add keywords field to references in refs.bib

--- a/papers/refs.bib
+++ b/papers/refs.bib
@@ -10,6 +10,7 @@
   doi       = {10.1088/1751-8121/ad909c},
   file      = {Doslic2024b - A Model of Random Sequential Adsorption on a Ladder Graph.pdf},
   publisher = {IOP Publishing},
+	keywords	= {journal},
 }
 
 @Article{Doslic2024,
@@ -24,6 +25,7 @@
   doi       = {10.1016/j.dam.2024.06.011},
   file      = {Doslic2024 - On a Variant of Flory Model.pdf},
   publisher = {Elsevier BV},
+	keywords	= {journal},
 }
 
 @Article{Doslic2024a,
@@ -39,6 +41,7 @@
   doi       = {10.26493/1855-3974.3114.d47},
   file      = {Doslic2024a - Complexity Function of Jammed Configurations of Rydberg Atoms.pdf},
   publisher = {University of Primorska Press},
+	keywords	= {journal},
 }
 
 @Article{Puljiz2023b,
@@ -57,6 +60,7 @@
   mrclass   = {60C05 (90C27)},
   mrnumber  = {4669233},
   publisher = {Taylor \& Francis},
+	keywords	= {journal},
 }
 
 @Article{Puljiz2023,
@@ -75,6 +79,7 @@
   mrclass   = {05B40 (00A67 52C15 60C05 90C27)},
   mrnumber  = {4696412},
   publisher = {University of Calgary},
+	keywords	= {journal},
 }
 
 @InProceedings{Puljiz2023a,
@@ -91,6 +96,7 @@
   file       = {Puljiz2023a - Complexity Function for a Variant of Flory Model on a Ladder.pdf},
   isbn       = {978-953-8168-63-5},
   url        = {https://www.grad.hr/crocodays/proc_ccd4/Puljiz.pdf},
+	keywords	= {journal},
 }
 
 @Article{Damjanovic2022,
@@ -106,6 +112,7 @@
   doi       = {10.3390/en15196920},
   file      = {Damjanovic2022 - Deep Reinforcement Learning Based Approach for Autonomous Power Flow Control Using Only Topology Changes.pdf},
   publisher = {MDPI AG},
+	keywords	= {journal},
 }
 
 @Article{AglicAljinovic2022,
@@ -123,6 +130,7 @@
   mrclass   = {26D15 (26E70)},
   mrnumber  = {4556566},
   publisher = {National Library of Serbia},
+	keywords	= {journal},
 }
 
 @Article{AglicAljinovic2021,
@@ -136,10 +144,11 @@
   doi       = {10.1016/j.amc.2021.126454},
   file      = {AglicAljinovic2021 - On Ostrowski Inequality for Quantum Calculus.pdf},
   fjournal  = {Applied Mathematics and Computation},
-  keywords  = {Q-derivative, Q-integral, Midpoint inequality, Ostrowski inequality, Hahn difference operator},
   mrclass   = {26D10 (05A30 26D15 26E70)},
   mrnumber  = {4278030},
   publisher = {Elsevier BV},
+  keywords  = {Q-derivative, Q-integral, Midpoint inequality, Ostrowski inequality, Hahn difference operator},
+	keywords	= {journal},
 }
 
 @Article{AglicAljinovic2021a,
@@ -157,6 +166,7 @@
   mrclass   = {26D10 (05A30 26D15)},
   mrnumber  = {4181218},
   publisher = {American Institute of Mathematical Sciences (AIMS)},
+	keywords	= {journal},
 }
 
 @Article{Henze2019,
@@ -172,6 +182,7 @@
   doi       = {10.1038/s41598-019-40648-w},
   file      = {Henze2019 - Multi Scale Stochastic Organization Oriented Coarse Graining Exemplified on the Human Mitotic Checkpoint.pdf},
   publisher = {Springer Science and Business Media LLC},
+	keywords	= {journal},
 }
 
 @Article{Good2019,
@@ -190,6 +201,7 @@
   mrnumber   = {3893427},
   mrreviewer = {Peng\ {Sun}},
   publisher  = {Institute of Mathematics, Polish Academy of Sciences},
+	keywords   = {journal},
 }
 
 @Article{Fernandez2018,
@@ -209,6 +221,7 @@
   mrnumber   = {3833345},
   mrreviewer = {Piotr\ {Oprocha}},
   publisher  = {Cambridge University Press (CUP)},
+	keywords   = {journal},
 }
 
 @Article{Haslegrave2017,
@@ -227,6 +240,7 @@
   mrclass   = {60G40 (60G50 60K35)},
   mrnumber  = {3632613},
   publisher = {Cambridge University Press (CUP)},
+	keywords	= {journal},
 }
 
 @Article{Fernandez2015,
@@ -244,4 +258,5 @@
   mrclass   = {37B20},
   mrnumber  = {3426021},
   publisher = {Elsevier BV},
+	keywords	= {journal},
 }
