feat: add new article reference for Doslic2025 in refs.bib

--- a/papers/refs.bib
+++ b/papers/refs.bib
@@ -1,3 +1,16 @@
+@Article{Doslic2025,
+  author    = {Došlić, Tomislav and Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
+  journal   = {Advances in Complex Systems},
+  title     = {Predators and altruists arriving on jammed Riviera},
+  year      = {2025},
+  issn      = {1793-6802},
+  month     = apr,
+  doi       = {10.1142/s0219525925500109},
+  file      = {Doslic2025 - Predators and altruists arriving on jammed Riviera.pdf},
+  publisher = {World Scientific Pub Co Pte Ltd},
+  keywords  = {journal},
+}
+
 @Article{Doslic2024b,
   author    = {Došlić, Tomislav and Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
   journal   = {Journal of Physics A: Mathematical and Theoretical},
