fix: update publication month and add volume and number for Doslic2025 in refs.bib

--- a/papers/refs.bib
+++ b/papers/refs.bib
@@ -4,7 +4,9 @@
   title     = {Predators and altruists arriving on jammed Riviera},
   year      = {2025},
   issn      = {1793-6802},
-  month     = apr,
+  month     = may,
+  number    = {05},
+  volume    = {28},
   doi       = {10.1142/s0219525925500109},
   file      = {Doslic2025 - Predators and altruists arriving on jammed Riviera.pdf},
   publisher = {World Scientific Pub Co Pte Ltd},
