feat: add new references for Doslic2025 and Doslic2025a in refs.bib, including publication details and links

--- a/papers/refs.bib
+++ b/papers/refs.bib
@@ -1,3 +1,20 @@
+@InProceedings{Doslic2025a,
+  author     = {Došlić, Tomislav and Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
+  booktitle  = {Proceedings of the 5th Croatian Combinatorial Days},
+  title      = {Surprising bijections of the Riviera model},
+  year       = {2025},
+  month      = jun,
+  pages      = {33--46},
+  publisher  = {University of Zagreb Faculty of Civil Engineering},
+  series     = {CroCoDays},
+  collection = {CroCoDays},
+  doi        = {10.5592/co/ccd.2024.03},
+  file       = {Doslic2025a - Surprising Bijections of the Riviera Model.pdf},
+  isbn       = {978-953-8168-77-2},
+  url        = {https://www.grad.hr/crocodays/2024/proc_ccd5/DPSZ.pdf},
+  keywords  = {journal},
+}
+
 @Article{Doslic2025,
   author    = {Došlić, Tomislav and Puljiz, Mate and Šebek, Stjepan and Žubrinić, Josip},
   journal   = {Advances in Complex Systems},
@@ -8,7 +25,7 @@
   number    = {05},
   volume    = {28},
   doi       = {10.1142/s0219525925500109},
-  file      = {Doslic2025 - Predators and altruists arriving on jammed Riviera.pdf},
+  file      = {Doslic2025 - Predators and Altruists Arriving on Jammed Riviera.pdf},
   publisher = {World Scientific Pub Co Pte Ltd},
   keywords  = {journal},
 }
